--- a/linearSearch.html
+++ b/linearSearch.html
@@ -30,16 +30,34 @@
                 <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Algorithm
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Searching
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="linearSearch.html">Linear Search</a></li>
-                  <li><a class="dropdown-item" href="binarySearch.html">Binary Search</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">More</a></li>
+                    <li><a class="dropdown-item" href="linearSearch.html">Linear Search</a></li>
+                    <li><a class="dropdown-item" href="binarySearch.html">Binary Search</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#">More</a></li>
                 </ul>
-              </li>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Sorting
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="bubbleSort.html">Bubble Sort</a></li>
+                    <li><a class="dropdown-item" href="selectionSort.html">Selection Sort</a></li>
+                    <li><a class="dropdown-item" href="insertionSort.html">Insertion Sort</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#">More</a></li>
+                </ul>
+            </li>
             </ul>
           </div>
         </div>
