--- a/selectionSort.html
+++ b/selectionSort.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algorithm Visualiser</title>
-    <link rel="stylesheet" href="Style/styleBinary.css">
+    <link rel="stylesheet" href="Style/styleSelection.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
@@ -65,15 +65,14 @@
 
       <div class="containerbox">
 
-        <h1 class="heading">Binary Search</h1>
+        <h1 class="heading">Selection Sort</h1>
 
         <div id="display">
         </div>
 
         <div class="inputbox">
-            Enter the number to search
-            <input type="text" name="search" id="search">
-            <button class="btn bg-light" id="searchbtn">Search</button>
+            Click to sort
+            <button class="btn bg-light" id="sortbtn">Sort</button>
         </div>
 
         <div id="result">
@@ -86,7 +85,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
         integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
         crossorigin="anonymous"></script>
-    <script src="Scripts/scriptBinary.js"></script>
+    <script src="Scripts/scriptSelection.js"></script>
 </body>
 
 </html>
